@@ -3,7 +3,11 @@
 	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
 	- Fixed methods with direct-parameter mapped to the application class ;
 	- Do not warn for classes that inherit from themselves (not a bug) ;
-	- Added support for aliases (Ruby String -> Carbon AliasHandle).
+	- Added support for aliases (Ruby String -> Carbon AliasHandle) ;
+	- Fixed integers-packed-into-string arguments handling.
+
+	* sample/iTunes_fade_volume.rb:
+	New sample.
 
 2006-07-13  Laurent Sansonetti  <lsansonetti@apple.com>
 
